# ComfyUI-Lux3D

./: .comfyui.json  .gitignore  LICENSE  README.md  README_CN.md  __init__.py  config.txt.example  install.json  lux3d_node.py  luxreal_engine.py  pyproject.toml  requirements.txt
js/: lux3d_viewer.js
render/: build_render_design.py  image_to_torch.py  model_upload.py  offline_render.py
sso/: invitation_code.py  sso_token.py
upload/: __init__.py  upload.py
