[project]
name = "lux3d"
description = "A ComfyUI extension providing nodes for generating 3D models from images and rendering/visualizing 3D assets within your workflow."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.25.0", "Pillow>=9.0.0", "numpy>=1.21.0", "OpenEXR==3.2.4; python_version == \"3.11\"", "OpenEXR==3.4.4; python_version == \"3.12\""]

[project.urls]
Repository = "https://github.com/manycore-research/ComfyUI-Lux3D"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/manycore-research/ComfyUI-Lux3D/wiki"
"Bug Tracker" = "https://github.com/manycore-research/ComfyUI-Lux3D/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Lux3D"
Icon = ""
includes = ["js"] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

